src/objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Base1__c</fullName>
        <formula>IF(ISPICKVAL( Color_Vendor__c ,&apos;No Tint&apos;) , Base__c ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base__c</fullName>
        <formula>Product2.Base__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_Name_Code1__c</fullName>
        <label>Color Name/Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_Name_Code__c</fullName>
        <label>Color Name/Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_Vendor__c</fullName>
        <label>Color Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Behr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benjamin Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Formula</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dunn-Edwards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glidden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kelly Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Tint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherwin Williams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vista</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Colorant1__c</fullName>
        <label>Colorant 2</label>
        <picklist>
            <picklistValues>
                <fullName>AXL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KXL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VUL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Colorant2__c</fullName>
        <label>Colorant 3</label>
        <picklist>
            <picklistValues>
                <fullName>AXL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KXL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VUL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Colorant3__c</fullName>
        <label>Colorant 4</label>
        <picklist>
            <picklistValues>
                <fullName>AXL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KXL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VUL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OZ_1__c</fullName>
        <label>OZ 1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OZ_2__c</fullName>
        <label>OZ 2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OZ_3__c</fullName>
        <label>OZ 3</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_per_Gallon__c</fullName>
        <formula>Your_Price__c / ( VALUE( Product2.Size__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price per Gallon</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>PricebookEntry.Product2.PRODUCT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <formula>IF(ISPICKVAL( Color_Vendor__c ,&apos;No Tint&apos;) ,  PricebookEntry.Product2.ProductCode ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Size__c</fullName>
        <formula>value(Product2.Size__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recycling_Fee_PDF__c</fullName>
        <formula>Recycling_fee_for_1_Gallon__c + Recycling_fee_for_5_Gallon__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recycling Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recycling_Fee__c</fullName>
        <label>Recycling Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recycling_fee_for_1_Gallon__c</fullName>
        <label>Recycling fee for 1 Gallon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recycling_fee_for_5_Gallon__c</fullName>
        <label>Recycling fee for 5 Gallon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sheen__c</fullName>
        <formula>TEXT(Product2.Sheen__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sheen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <formula>Product2.Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use__c</fullName>
        <formula>TEXT(Product2.Use__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Use</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <formula>Product2.Vendor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_Gallon__c</fullName>
        <defaultValue>0</defaultValue>
        <label>1 Gallon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X384ths_1__c</fullName>
        <label>384ths 1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X384ths_2__c</fullName>
        <label>384ths 2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X384ths_3__c</fullName>
        <label>384ths 3</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X5_Gallon__c</fullName>
        <label>5 Gallon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Your_Price__c</fullName>
        <formula>UnitPrice * (1 - Discount)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Your Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>